Fixed popover left/right arrow alignment.

--- a/components/popovers/popovers.less
+++ b/components/popovers/popovers.less
@@ -10,14 +10,8 @@
 
 //adjustments to make popover arrow align
 .popover.right > .arrow {
-    top: 50%;
-    left: 24px;
-    margin-top: -11px;
-    border-left-width: 0;
+    left: 24px !important;
 }
-.popover.left>.arrow {
-    top: 50%;
-    margin-top: -11px;
-    border-right-width: 0;
-    left: 113%;
+.popover.left > .arrow {
+    left: 113% !important;
 }
